--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <a class=hb-logo href="http://harish.website/">
                                 <p><span>&lt; HARISH /&gt;</span></p>
                             </a>
-                        </div><a href=assets/images/HarishBoke_Resume.pdf class="download-cv" download="HarishBoke_Resume.pdf"><i class=icon-download4></i><span>Resume</span></a></div>
+                        </div><a href="assets/images/Harish_Boke_resume.pdf" class="download-cv" download="HarishBoke_Resume.pdf"><i class=icon-download4></i><span>Resume</span></a></div>
                 </div>
             </div>
         </header>
@@ -133,12 +133,16 @@
 
     <div id=hb-page>
         <section name=container id=startchange>
-    <div id="hb-accordion" class="wrapper center-block" style="margin-top: 90px;">
+    <div id="hb-accordion" class="wrapper center-block container" style="margin-top: 90px;">
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
         <div class="panel-heading active" role="tab" id="headingOne">
             <h4 class="panel-title">
             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <span class="icon-wrap">
+                    <i class=icon-plus2></i>
+                    <i class=icon-minus2></i>
+                </span>
                 Entrepreneurship
             </a>
             </h4>
@@ -206,7 +210,7 @@
                                         </div>
                                         <div class=col-md-6>
                                             <div class="services animate-box">
-                                                <h3>Technologies</h3>
+                                                <h3>Areas Of Expertise</h3>
                                                 <ul>
                                                     <li>Business Strategy & Planning</li>
                                                     <li>Work under pressure</li>
@@ -215,48 +219,42 @@
                                                     <li>International business</li>
                                                     <li>Business law & business Ethics</li>
                                                     <li>Attention to detail</li>
-                                                </ul>
-                                            </div>
-                                            <div class="services animate-box">
-                                                <ul>
                                                     <li>Accountability and determination</li>
-                                                    <li>Accounting and finance management</li>
                                                     <li>High-stakes negotiation</li>
                                                     <li>Risk management</li>
                                                 </ul>
                                             </div>
                                             <div class="services animate-box">
+                                                <h3>Value Driven Decison</h3>
                                                 <ul>
                                                     <li>Business analysis and intelligence</li>
                                                     <li>Organizational restructuring</li>
                                                     <li>Public relations </li>
                                                     <li>Project management skills</li>
                                                     <li>Verbal and written communication skills</li>
+                                                    <li>Management skills</li>
+                                                    <li>Decision-making skills</li>
+                                                    <li>Critical thinking Skills</li>
                                                 </ul>
                                             </div>
                                         </div>
                                         <div class=col-md-6>
                                             <div class="services animate-box">
+                                                <h3>Integrity</h3>
                                                 <ul>
-                                                    <li>Management skills</li>
-                                                    <li>Decision-making skills</li>
-                                                    <li>Critical thinking Skills</li>
                                                     <li>Interpersonal skills</li>
                                                     <li>Creative thinking Skills</li>
                                                     <li>Time management skills</li>
                                                     <li>Problem-solving skills</li>
-                                                </ul>
-                                            </div>
-                                            <div class="services animate-box">
-                                                <ul>
                                                     <li>Technical skills</li>
                                                     <li>Leadership skills</li>
-                                                    <li>Collaboration and teamwork</li>
-                                                    <li>Innovation</li>
                                                 </ul>
                                             </div>
                                             <div class="services animate-box">
+                                                <h3>Encourages Initiative</h3>
                                                 <ul>
+                                                    <li>Collaboration and teamwork</li>
+                                                    <li>Innovation</li>
                                                     <li>Risk-taking </li>
                                                     <li>Adaptability</li>
                                                     <li>Foresight</li>
@@ -278,6 +276,10 @@
         <div class="panel-heading" role="tab" id="headingTwo">
             <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <span class="icon-wrap">
+                    <i class=icon-plus2></i>
+                    <i class=icon-minus2></i>
+                </span>
                 Developer
             </a>
             </h4>
