--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <i class=icon-plus2></i>
                     <i class=icon-minus2></i>
                 </span>
-                Entrepreneurship
+                <span class="accordion-title">Entrepreneurship</span>
             </a>
             </h4>
         </div>
@@ -280,7 +280,7 @@
                     <i class=icon-plus2></i>
                     <i class=icon-minus2></i>
                 </span>
-                Developer
+                <span class="accordion-title">Developer</span>
             </a>
             </h4>
         </div>
