--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset=utf-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
-    <title>Harish Boke - Web Developer</title>
+    <title>Harish Boke - Entrepreneur  & President</title>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <meta name=description content="harish boke, Front-end Web Developer specialising in Responsive Websites using HTML5, CSS3, SVG, Creative JavaScript, Progressive Enhancement">
     <meta name=keywords content="front-end developer, front-end development, web developer, Website development, UI developer, Harish Boke Web Developer, Web Developer in India, Web developer in Pune, Responsive Web Design, SEO, SEO specialist, Web Designing, Professional Web Developer, Professional Front end Developer">
@@ -143,7 +143,7 @@
                     <i class=icon-plus2></i>
                     <i class=icon-minus2></i>
                 </span>
-                <span class="accordion-title">Entrepreneurship</span>
+                <span class="accordion-title">Entrepreneur</span>
             </a>
             </h4>
         </div>
